objects/HttpRequestLog__c.object
<CustomObject>
    <label>Http Request Log</label>
    <nameField>
        <label>Http Request Log</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Http Request Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Conta__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Conta</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Http Request Logs</relationshipLabel>
        <relationshipName>HttpRequestLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Http Request Logs</relationshipLabel>
        <relationshipName>Http_Request_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Method__c</fullName>
        <label>Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contato__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contato</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Http Request Logs</relationshipLabel>
        <relationshipName>Http_Request_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Headers__c</fullName>
        <label>Headers</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Produto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Produto</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Http Request Logs</relationshipLabel>
        <relationshipName>HttpRequestLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Endpoint__c</fullName>
        <label>Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StatusCode__c</fullName>
        <label>StatusCode</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RequestBody__c</fullName>
        <label>RequestBody</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Oportunidade__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Oportunidade</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Http Request Logs</relationshipLabel>
        <relationshipName>Http_Request_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ResponseBody__c</fullName>
        <label>ResponseBody</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <listViews>
        <fullName>Todos</fullName>
        <columns>NAME</columns>
        <columns>Method__c</columns>
        <columns>StatusCode__c</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
</CustomObject>